Improved markdown styling; fixed top margin of text spacing

--- a/src/components/window-shade-content.sass
+++ b/src/components/window-shade-content.sass
@@ -18,75 +18,36 @@
     width: 512px;
     margin-right: 2em;
 
+.authorMarkdown
+  margin: 30px
+  margin-top: -15px
+  table
+    border-collapse: collapse
+  th, td
+    padding-left: 10px
+    padding-right: 19px
+    border: solid 1px $textBlack
 
 .theoryAndBackground
   color: $yellowContentTextColor
   &.authorMarkdown
     h1,h2,h3,h4,h5,th,em,strong
       color: $yellowContentTextAccentColor
-    table
-      border-collapse: collapse
-    th, td
-      padding-left: 10px
-      padding-right: 19px
-      border-right: 1px solid $yellowContentTextColor
-      border-bottom: 1px solid $yellowContentTextColor
-    th:last-child, td:last-child
-      border-right: none
-    tr:last-child
-      td
-        border-bottom: none
      
 .teacherTip
   color: $blueContentTextColor
   &.authorMarkdown
     h1,h2,h3,h4,h5,th,em,strong
       color: $blueContentTextAccentColor
-    table
-      border-collapse: collapse
-    th, td
-      padding-left: 10px
-      padding-right: 19px
-      border-right: 1px solid $blueContentTextColor
-      border-bottom: 1px solid $blueContentTextColor
-    th:last-child, td:last-child
-      border-right: none
-    tr:last-child
-      td
-        border-bottom: none
 
 .discussionPoints
   color: $orangeContentTextColor
   &.authorMarkdown
     h1,h2,h3,h4,h5,th,em,strong
       color: $orangeContentTextAccentColor
-    table
-      border-collapse: collapse
-    th, td
-      padding-left: 10px
-      padding-right: 19px
-      border-right: 1px solid $orangeContentTextColor
-      border-bottom: 1px solid $orangeContentTextColor
-    th:last-child, td:last-child
-      border-right: none
-    tr:last-child
-      td
-        border-bottom: none
 
 .diggingDeeper
   color: $purpleContentTextColor
   &.authorMarkdown
     h1,h2,h3,h4,h5,th,em,strong
       color: $purpleContentTextAccentColor
-    table
-      border-collapse: collapse
-    th, td
-      padding-left: 10px
-      padding-right: 19px
-      border-right: 1px solid $purpleContentTextColor
-      border-bottom: 1px solid $purpleContentTextColor
-    th:last-child, td:last-child
-      border-right: none
-    tr:last-child
-      td
-        border-bottom: none
